src/test/ui/variance/variance-object-types.stderr
error[E0208]: [o]
  --> $DIR/variance-object-types.rs:11:1
   |
LL | / struct Foo<'a> {
LL | |     x: Box<dyn Fn(i32) -> &'a i32 + 'static>
LL | | }
   | |_^

error: aborting due to previous error

